# imgclass

./: Containerfile  LICENSE  README.md  pyproject.toml
src/imgclass/: __init__.py
