[project]
name = "imgclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "flax>=0.12.7",
    "jax>=0.10.2",
    "optax>=0.2.8",
    "pillow>=12.2.0",
]

[project.scripts]
imgclass = "imgclass:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo>=0.23.10",
    "ruff>=0.15.21",
    "ty>=0.0.60",
]
